    - Fix too small toolbar icons on high dpi displays
    - Fix bug that caused text highlighting to get lost on some systems when doing a CSS Find & Replace.
    - Fix bug in plugin interface basename_to_id to recognize .htm extensions
    - Fix bug in epub3 semantic popups to always refect the local name of epub:type setting

  New Features
    - Extend validation plugin interface with add_extended_result() method to allow better cursor positioning
    - Extend TextTab and  Tabs derived by it to position cursor based on offset
    - Allow editing of page-map.xml files, xpgt files and other misc xml based files inside Sigil
    - Update Windows builds use Python 3.5, VS2015
    - Update Mac OS X builds and build instructions to use Python-3.5.2
    - Remove support for python2.7 *only* plugins and simply Manage Plugins settings
    - Update to Qt 5.6.1-1 with QtWebKit added back for release builds for Windows (VS2015)  and Mac OSX
    - Update Mac OS X and Linux build instruction documentation for recent changes
    - Allow Linux Dictionaries to look up default paths  for dictionaries passed in by build cmake settings
    - Mke the columns in the Manage Plugins table be sortable by the user
    - Better detect undefined and non-existing url fragments to prevent issues when splitting or merging files
    - Make tooltips for Run Plugin Icons show the name of the selected plugin on hover
    - Upgrade from jquery 1.6.2 to version 2.2.4
    - Upgrade from jquery.scrollTo 1.4.2 to version 2.1.2
    - Upgrade to double sized 48x48 pixel icons for High DPI displays, Special Thanks to PatNY for creating our icons


Sigil-0.9.6
   Bug Fixes
    - Make StdWarningDialog resizeable when "Show Details" is used
    - Fix CleanSource svg prefix removal bug that sometimes broke valid svg code 
    - Remove svg image and html5 menuitem from the list of void elements in the Sigil and plugin code
    - Properly xml escape "&" in metadata attribute values